@@ -86,7 +86,7 @@ int glMakeCurrentRenderer(glRenderer *renderer)
 	return 0;
       if (!dpy->ioGLmakeCurrentRenderer(renderer))
 	{
-	  DPRINTF(1, (fp, "glMakeCurrentRenderer failed\n"));
+	  DPRINTF3D(1, (fp, "glMakeCurrentRenderer failed\n"));
 	  return 0;
 	}
     }
@@ -105,7 +105,7 @@ int glCreateRendererFlags(int x, int y, int w, int h, int flags)
 
   if (flags & ~(B3D_HARDWARE_RENDERER | B3D_SOFTWARE_RENDERER | B3D_STENCIL_BUFFER))
     {
-      DPRINTF(1, (fp, "ERROR: Unsupported renderer flags (%d)\r", flags));
+      DPRINTF3D(1, (fp, "ERROR: Unsupported renderer flags (%d)\r", flags));
       return -1;
     }
 
@@ -115,7 +115,7 @@ int glCreateRendererFlags(int x, int y, int w, int h, int flags)
 
   if (index == MAX_RENDERER)
     {
-      DPRINTF(1, (fp, "ERROR: Maximum number of renderers (%d) exceeded\r", MAX_RENDERER));
+      DPRINTF3D(1, (fp, "ERROR: Maximum number of renderers (%d) exceeded\r", MAX_RENDERER));
       return -1;
     }
 
@@ -123,11 +123,11 @@ int glCreateRendererFlags(int x, int y, int w, int h, int flags)
   renderer->drawable= 0;
   renderer->context=  0;
   
-  DPRINTF(3, (fp, "---- Creating new renderer ----\r\r"));
+  DPRINTF3D(3, (fp, "---- Creating new renderer ----\r\r"));
 
   if ((w < 0) || (h < 0))
     {
-      DPRINTF(1, (fp, "Negative extent (%i@%i)!\r", w, h));
+      DPRINTF3D(1, (fp, "Negative extent (%i@%i)!\r", w, h));
       goto fail;
     }
   else
@@ -140,11 +140,11 @@ int glCreateRendererFlags(int x, int y, int w, int h, int flags)
 	renderer->bufferRect[3] = h;
 	if (!glMakeCurrentRenderer(renderer))
 	  {
-	    DPRINTF(1, (fp, "Failed to make context current\r"));
+	    DPRINTF3D(1, (fp, "Failed to make context current\r"));
 	    glDestroyRenderer(index);
 	    return -1;
 	  }
-	DPRINTF(3, (fp, "\r### Renderer created! ###\r"));
+	DPRINTF3D(3, (fp, "\r### Renderer created! ###\r"));
 	glDisable(GL_LIGHTING);
 	glDisable(GL_COLOR_MATERIAL);
 	glDisable(GL_BLEND);
@@ -163,14 +163,14 @@ int glCreateRendererFlags(int x, int y, int w, int h, int flags)
       }
 
  fail:
-  DPRINTF(1, (fp, "OpenGL initialization failed\r"));
+  DPRINTF3D(1, (fp, "OpenGL initialization failed\r"));
   return -1;
 }
 
 
 glRenderer *glRendererFromHandle(int handle)
 {
-  DPRINTF(7, (fp, "Looking for renderer id: %i\r", handle));
+  DPRINTF3D(7, (fp, "Looking for renderer id: %i\r", handle));
   if ((handle >= 0) && (handle < MAX_RENDERER) && renderers[handle].used)
     return renderers + handle;
   return 0;
@@ -180,7 +180,7 @@ glRenderer *glRendererFromHandle(int handle)
 int glDestroyRenderer(int handle)
 {
   glRenderer *renderer= glRendererFromHandle(handle);
-  DPRINTF(3, (fp, "\r--- Destroying renderer ---\r"));
+  DPRINTF3D(3, (fp, "\r--- Destroying renderer ---\r"));
   if (renderer)
     {
       if (!glMakeCurrentRenderer(0))
